# ChangeLog for net-wireless/ubertooth
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/ubertooth/ChangeLog,v 1.28 2015/03/19 21:51:22 zerochaos Exp $

  19 Mar 2015; Rick Farina <zerochaos@gentoo.org> ubertooth-9999.ebuild:
  update pcap dep properly.  upstream should add some better flags for
  controlling it soon but this mostly works

  18 Mar 2015; Rick Farina <zerochaos@gentoo.org> ubertooth-9999.ebuild:
  update live ebuild for new udev installation method

  26 Aug 2014; Rick Farina <zerochaos@gentoo.org> ubertooth-2014.04.1-r1.ebuild,
  ubertooth-9999.ebuild:
  fix typo/stupidity in firmware fix

*ubertooth-2014.04.1-r1 (25 Aug 2014)

  25 Aug 2014; Rick Farina <zerochaos@gentoo.org>
  +ubertooth-2014.04.1-r1.ebuild, -ubertooth-2012.10.1-r1.ebuild,
  -ubertooth-2012.10.1.ebuild, -ubertooth-2014.04.1.ebuild, metadata.xml,
  ubertooth-9999.ebuild:
  move firmware to appropriate location and ship the dfu image instead of the
  bin

  08 Apr 2014; Rick Farina <zerochaos@gentoo.org> metadata.xml,
  ubertooth-9999.ebuild:
  make pcap optional and fix a few issues with live ebuild

  08 Apr 2014; Rick Farina <zerochaos@gentoo.org> ubertooth-2014.04.1.ebuild,
  ubertooth-9999.ebuild:
  add := to bluez dep

  08 Apr 2014; Rick Farina <zerochaos@gentoo.org> ubertooth-2014.04.1.ebuild,
  ubertooth-9999.ebuild:
  add := to libpcap dep

*ubertooth-2014.04.1 (08 Apr 2014)

  08 Apr 2014; Rick Farina <zerochaos@gentoo.org> +ubertooth-2014.04.1.ebuild,
  metadata.xml, ubertooth-9999.ebuild:
  new release from upstream and live fixes

*ubertooth-2012.10.1-r1 (27 Apr 2013)

  27 Apr 2013; Rick Farina <zerochaos@gentoo.org>
  +ubertooth-2012.10.1-r1.ebuild:
  adjust subslot and subslot deps properly

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> ubertooth-0.0_p534.ebuild,
  ubertooth-2012.10.1.ebuild, ubertooth-9999.ebuild:
  Move Qt dependencies to the new category
