@@ -3,10 +3,10 @@ DEPEND=bluez? ( net-wireless/bluez:= ) >=net-libs/libbtbb-9999:= pcap? ( net-lib
 DESCRIPTION=An open source wireless development platform suitable for Bluetooth experimentation
 EAPI=5
 HOMEPAGE=http://ubertooth.sourceforge.net/
-IUSE=+bluez +dfu +specan +pcap +python +ubertooth1-firmware +udev
+IUSE=+bluez +specan +pcap +python +ubertooth1-firmware +udev
 LICENSE=GPL-2
-RDEPEND=bluez? ( net-wireless/bluez:= ) >=net-libs/libbtbb-9999:= pcap? ( net-libs/libbtbb[pcap] ) virtual/libusb:1= specan? ( >=dev-qt/qtgui-4.7.2:4 >=dev-python/pyside-1.0.2 >=dev-python/numpy-1.3 >=dev-python/pyusb-1.0.0_alpha1 ) dfu? ( >=dev-python/pyusb-1.0.0_alpha1 ) udev? ( virtual/udev ) python? ( =dev-lang/python-2* )
-REQUIRED_USE=dfu? ( python ) specan? ( python ) ubertooth1-firmware? ( dfu ) python? ( || ( dfu specan ) )
+RDEPEND=bluez? ( net-wireless/bluez:= ) >=net-libs/libbtbb-9999:= pcap? ( net-libs/libbtbb[pcap] ) virtual/libusb:1= specan? ( >=dev-qt/qtgui-4.7.2:4 >=dev-python/pyside-1.0.2 >=dev-python/numpy-1.3 >=dev-python/pyusb-1.0.0_alpha1 ) udev? ( virtual/udev ) python? ( =dev-lang/python-2* )
+REQUIRED_USE=specan? ( python ) python? ( specan )
 SLOT=0
 _eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	distutils	92e738ea29389cb3f34778d7a349ac71	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	git-r3	3a2bd0ae504c33a50061885480f3def3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python	3a270b7b1d1e679847ff0faeac25c5a3	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	udev	da001465a2e939c93f7ae16947ce3438
-_md5_=8b9a2fbcfea22f9e5a855dcf6e2ad1a0
+_md5_=9ee389deaee1e097ccf25f82e440e759
