@@ -11,4 +11,4 @@ RDEPEND=X? ( x11-misc/xdg-utils sci-visualization/gnuplot[gd] tk? ( dev-lang/tk:
 SLOT=0
 SRC_URI=mirror://sourceforge/maxima/maxima-5.36.1.tar.gz
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	elisp-common	82fe92893adf25f1e5d0db48b0ec4cb3	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=542b013209b73d9544492cf6fdf0d933
+_md5_=751c5ac23a10275937570094f246f430
