@@ -6,23 +6,23 @@ DIST ubertooth-2014-04-R1.tar.xz 1762456 SHA256 0881b4bde755acea557851852bc830c1
 DIST ubertooth-r534.tar.gz 2959832 SHA256 5e227872ee8c088fe2cdac936c4a30d1e12b8f7c6ac781c96004ad7528b44730 SHA512 b3e150b8f8a4335f65fd8b7b629316eae08cf0560269991af6632d48e360f17dd98742da975df33852760140cd5f4571f72f36d973fa5e6d8df47932561acfa6 WHIRLPOOL 7d7ea0db033b34cbf16f963ea42d05db9bf8f82f41d5d26dd6510a95ffe339dae3fef54f5cef5d71bfedb1e05531bf33998cbcabe88af611feeaecf1e22a7b10
 EBUILD ubertooth-0.0_p534.ebuild 3146 SHA256 8833b94bfe8e4b42910300207f48db53a5c088236eaa4e58c7d2b860c28cde54 SHA512 f53a0b2cdead288a5cb41721cfd933dae8307d3eb2f41c875a68c013a59a4733b299f3f041654f2074c8c4808e3787e0b97994662563c38afb89108202ca66dd WHIRLPOOL a3e66d0743063a088901f53be569d0d2d4ae8c21c68b5bcb8f0733cf44570efe4cc11e4f44709e6e9e2b4de7c56656f2b80722a07857b7b8dc76213f7c8c4c6c
 EBUILD ubertooth-2014.04.1-r1.ebuild 3071 SHA256 3231343ba17039001dec14ef9fdb2110373c42f9ccb03b944ce511940831f727 SHA512 ebc80265a2dfa97554091d48ddc1f5e1c860989f65a5af37d3e7d52701ac4ec3d952b9a63c0f9c639f184b353966b806b1cadf8fcb51b6256bf33b930dcd98db WHIRLPOOL e39ae101af16d58845cd35b6e82d45e81d3fc088dfe4adbfbab50853eed40c5e4fd2a57303b66271f38296d166ae6564d04113468080fab490234bfb8fc7ae5d
-EBUILD ubertooth-9999.ebuild 3181 SHA256 306d09f6f41cfd6d0416dd4e90a0d2b311ead081b31bdd1801f26c846900fbcb SHA512 71a1f8123197adb7fcde6adf4150200e5f79ef6b1b1d4194ec07f738e97f2ace0dfc38a00c42bae46a8f6353b288ffc73918bb3d5daac7c594e33c3db245ab86 WHIRLPOOL 99208890f5cad5886cad36970a517926e7276ed84909aa4fc810f51906b36dfe4297581f64ff0076f4bf5ce13fb6df44ac0548e98d39d6294e5ff09e1f76a035
-MISC ChangeLog 4833 SHA256 3b17bf6d36b393cb5df9d0f47cc63b2e3146258d706523ff2fcfdb620b603d60 SHA512 a4e97da51107c60eca20ee77009b1b677977a918465c0201c669c325d1c8eb2f54cec55536e2d49164111ed00f62a187b702bba251efb4c06530a23681bb30c2 WHIRLPOOL 58e7323597f49b684bdf8e29855ad1c9e3f7be51872eaa8d117d4eca5291736d2eb83c14b6fb127626cea14d3a81a3b201767d58f6b9e5290d09e19f788e321d
+EBUILD ubertooth-9999.ebuild 2962 SHA256 d025429a8c74c30a88f7b2bd34d40e7dc8218e215834ea00570fedbb72d298ec SHA512 88af85cd6a98323764f43ff2f3463b4d5ed2d2d753102740b1752c82a931427a6a437036c0bc6f1ad24002f8611bdb42874873109f83758108c6c59570c74028 WHIRLPOOL 7e805c790cf59c49c3ccdf7cf9c9200188e0267dd7483da1e8f036c57387103441ef26b6a411a1351f41d3d930a74c2f09fb3535c1846f99e1315d9d388e97bb
+MISC ChangeLog 4957 SHA256 42f13dfd3ae7ebf8d803dc4151e0000ba36c69da6d8898b434b701aa03c7cdf6 SHA512 ca1dff6fc3727d23fc9064c57d9f0a10fa61ae6ccb0abdfd82cf7f0c326db7a7abdaa763af3e7cbff17d392dbe9917a3eb108b5fa6e1ed1bc71685baf8d16fd8 WHIRLPOOL 6b24664a7e0f2937a65be9e4708e9f28b6ce6247a181793f493680c20a68a68724cdec4dd43ac9a25495d6e7750cf227d4f5946a7b9663b8d221b79d0af15a46
 MISC metadata.xml 753 SHA256 e3b7faa33746664cf24f317a0f76b56d4d2f410e11f4a7bb2f20eeeebb5f4787 SHA512 c0716724de8eeac4caa55fe224036b9b6b8ec8b8bd81f6e61365b83a7a51ce0a8d500b99b216af79da507ace24238b551cf4a61c38c32f86a66bec75def46a79 WHIRLPOOL a4122aaab045cea78cfcd592c40931dab667ae1efe1fee1f62a4247bb582956d1262010e442f1c6fa57afd20f755af63ff4f52a2ef51ecbe3f5b615b0caa71bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVC0TlAAoJEKXdFCfdEflKGQ8QAJpkrOq/A5Mi/KuA/jSeN7mw
-h+eS7mt8YgcIqd52bqKit4dOxpZnES4ABFv3DQlHdeEbobgMqMS8sXtddcRAhGvD
-Rq6HxkYo3n+IdpS1bHJZay9IASO556Yw07CGJVR6EUMTDHCHPRsb9xk7czV8ATzX
-FY7GEhD28QPaP3u9YkYHSMSTlprttKBEenRLbdBPxIM9lepdQyEERNjAEuOKblqi
-i4oCO5pI6Kmnf6GNd50fcHGCVBIQkJai0mCL2BasKOqJqwHBux469IzypNCb/lV4
-DshGx6jgueMnHuA9NaTG7MZnulEHo2BT7itMYWkce3psGR3G2t2R1EMN/SWJG9t8
-cykFFRBb1nTDyOVVPpGvrFVxL6kCkABxTOhDRjNDu77opB4iXceanD2DzfXcPMU4
-ZXotz7W+1sGL/Yc4rojc3UWYR1BTjvZ30Ppo0eZ+Ojyn85Fh7PRoQDgHEX400yBH
-Rs1V/rtFq/3+RvTACvMFO4ULDdFyOKV7I4eNOYLl/AwtiF/ZYiBTr7JSwg7gbIaL
-SnyKixLww3ojwYy5KGffaQCEx+vci8dc0wvLLDn/dwbdShVNMQpA8fD4AfkQ4JK9
-K+4GRn1lMX1UHzCi76vhuQOubXAZlyKgCOvbToMmBsGh7I447hd9I0+pACS0H675
-5YhFrP+5/3IQ5awFeklz
-=W7O5
+iQIcBAEBCAAGBQJVRagDAAoJEKXdFCfdEflKMXUP/2Ti6wxO7GFW52f9WwO0XFOg
+nH8+vBlMlO2fejJcvTNyihsvDh7duueBt6yw3TO0TsVSGoLBvgI3XuAsROIIsJzl
+Y3rEam42+Wc4Bfl0tJFHZ3FvuMV+v6E8I7kJp1+2z8fEp0cHiXllcC+UyE9XErIk
+x5UclL1jWTN1vagpLOL+NPPbJhwj5Xi0M4SMWxOsPIv4s/f0jlXvGwXczzjhXoRn
+UU9hHBAXGET4mpYcJ/kdJ0vHBw0ZLJGmG2wL20DmtPRUd1e3dQQTCgOmX7s6SuDM
+8trTL08GkJpmoAVqCIJ325K7q6IQkhSFE0VRxCFKicKjViEh7Om06qCye+owQwkE
+DGpJqws57A7PcGfxx9xHzIzitcTI5j4NFW5hqNQZDfZUkjoZB99fNQlhbIXlbEGb
+SpTYO9TSpjJVhiNxleGmyU9JfraTfcr9Fd1VEm1/SrxpGxhNgVKYCX4Ahchfy2jP
+U9JhhMUeAjQl6m/NgIlBXtxq2vW1JdgORtJjr0cyWOtMZwSbmAY8LWet1j/rNDQl
+/e/if5+XhjWLadu5aqWyFIR/2BHid4sHTGRF2kUcngr2k9w9BSlVl0DiTnjH8vhE
+OmZI81RmzmUS1TL2NqCW/wLqe+/zTwqUWHRLVJXL9XTLX3jfjraicfEMtgNfXiWo
+N9bYiMwTmoO0yZ10Bb7H
+=DBJm
 -----END PGP SIGNATURE-----
