@@ -37,25 +37,25 @@ DIST maxima-5.34.1.tar.gz 29469851 SHA256 20ca416ca912c8d3d99299f2ef45342a1beb2f
 DIST maxima-5.36.1.tar.gz 29615673 SHA256 400bf83000b84d280d75e200e078582fe44f23220824562cc06c589d8a993974 SHA512 10e090230ab408777a1145ad90daef6bf237ba38ae31a654ba4d464e7a27e1f48baac5202ce8fb39e4c04ec9a6c9916ac83a58bd071b676ea5a989ea7db87d4c WHIRLPOOL ee7738085ae9e5b156b89afbf724b3ae5ef70b74550bee43cf3ab763f569d5ac51ea9c0e5aad67070f4b71f480b079aad8e4fd44ded34525a1f84cbeeb2d28b0
 EBUILD maxima-5.18.1.ebuild 4193 SHA256 64ba3288850cddd6685fcf613dca19bab54110274a4e9a2aadd5e81b9a4c6313 SHA512 4b7be45a2959e7808e670ef8abd75453050bc665eb1bd42e08930a6eebbe3d49162d12cbc2be009ac9f4a5a2739a5109969973bd33fdbbaaf8de15e6b55414da WHIRLPOOL b51e5e5cf512cabc393f9ce816b891238eb059f43c0e2ca5c15405a755a3d8f42ed7ca63043221d9bb793de21ce70b15878399e4490a795464b05adbdf1e3531
 EBUILD maxima-5.34.1.ebuild 4375 SHA256 e37944b09e03ab21a65393aece86c984f484ace7963d3c5f24318c1a6a4fb15f SHA512 846ebabc6aca594a1d4b68bc666f678d20c0d79828e57c88636c11dccb67bd0e4c4d80340e4c6690bc6a52ed201a0467203d246da895f3475d79a39f48a06044 WHIRLPOOL f5c5ca0a10a3abe7e97f4487cda32a6c58cd1ccaf92f1a6a272a25f3e27676548e0a2890618d504d5f19c74fd33238b52a04d397e897c44d9f449bd188322d0e
-EBUILD maxima-5.36.1.ebuild 4516 SHA256 7094f5746ad4fe1ae180c45bc695170cf430f473f6838e76a314c2bd3556cd0c SHA512 17b6dfbe0cdf55803ea5b1eaaca1d6d90a65014f08160b139f05e6c80807f6da8c979f3026a21e6cab6fe3d76136593c812e62d2747619958849b654cf9b59c6 WHIRLPOOL 548c09400ddc410673c1c8fcc2fbcb2a5b3dd5068fd8bed923d28403530a602171aba2ceb5abb4fc2820a0b30bebd0f8faeecdc43087d083c24aa4e60aff4603
-MISC ChangeLog 26737 SHA256 147e8725314b52106102963091ed35ac594794a2297f19db9260552955997b41 SHA512 e600e9132d8770f2ece634c6a2626db91e4af4c93f54fbcadddef1e894a5e3f77ea3a90cb49a0eddc11930d3dae7b4cc18564ce45fe177704e7799c277e058c7 WHIRLPOOL ef60a5862b536cdcd6a0df00604c23cbb30e2df5773dfdb2fb716fd4f2adefdb101a28298c8e5790681d53bab046d91198c2427a706e4b14414f4a3677e9ab73
+EBUILD maxima-5.36.1.ebuild 4380 SHA256 e30b09f0ee9e63f44a1cadddb0c34c5b9361025bc5011a57cf449da6295a3da7 SHA512 5eebcf87e251c2bc0dbffe03affe07c879d851db35eef7b9417b92d3fb7fb4560d04d127a56ded61c192a8f8bc2d6b4594ab2fa62cccd3f2c8175608d274f3a3 WHIRLPOOL 995049e7ab2bea9b34cf7f1790ead174e4e14d7545581256b1ee85fda3d8910fd40a4217c394c4444082dbec0e68464e19b0eae8ad27411a3bd065d6624f7848
+MISC ChangeLog 26867 SHA256 928928dc8eb994e97729bc32db4f8c018edc7fa47f865b9ff7c5f306c859afa4 SHA512 b193def6b27345190771f51ff3e96f5b6fe36eca890ee5825effccd7d9ed01eb009f71663f8745862eb48b1a63eb324c433c55e7dafc8e8c1711397255b2b970 WHIRLPOOL 66906b06d9b1a21acda62ae8910298718ff82bf40998a8b96d23759cc1b452c9284b37039c79d631bb9a504f06aa393cd0a9add86604b69ffc15e8aaf5767a2e
 MISC metadata.xml 1336 SHA256 ba85450d6c96f0bf3caed848497f89c9fa7dc13b6f81c0c839f0b8e79f05d689 SHA512 a63e9bc47a809774ec9ebc57e333e6fc055f75d6b0e13e23a3b9e40f6899feadf40458296078f2a4d63c549a42125a221c10302dbf7bfcd7f6a5376bf8da0f42 WHIRLPOOL 24f6471e99abc16ea978d347103551c0cfe6fe490aab3ca87300fa6e681d6ce6c6b91cebdbbc803ca43f805f4ec9ec19b1605cadefb080eeebec439ace7a32ae
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.1
 
-iQJ8BAEBCABmBQJVQ5kWXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVRaIKXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwOEM0RURGNjY5QzVBNjMwRkU3REVCOTQz
-QUZGQ0U5NzREMzRCRDhDAAoJEDr/zpdNNL2M680P/RRRu5duWe4t0VfoyAqz8m8O
-zPWwkOZ86D8WxvnaVL45H4gSf9dNUoXpSx+9Adiunpxu0MNfB1yhRvuYYVdCWpuO
-/OhL9ZImRxjeSw36nrjmHCwh9wozumxHw01TbAHKv+XDSGCEfGCUcXmZMn/e6iBy
-JYGz5QByn8lmlZQ2OZekt1zanZMicSY/cqBhiAoBgDcgZXerG2+quUE60r0qPgg2
-UPqYkYKWMXDRjU2j7x71ft6EVkHD3RABe9kAii38k+y4+tYAsO2Q2NCYtmIOfq3i
-U4JAyU7lMF7l2T1G9D03OblwRgZSUOQRN6kXBdZ5vIJES2bDgRxC+oR9kNqwwLhR
-60g6q8tvsiALVmavq2WksrCKBb5cZ+mO9h5eu4KdlL113obX46iL3uykhYPoTXd+
-0Dhru2yM/jllsahXzBx8PF+f7EGp4frS3a2PGsUHOXXfRaY3IO44tO9k2MTz+XKY
-+o5tCXuzSY+Kuj5vrUGfPw7w0WMoMM8MQJtiHMbSLn512HZNWM0l0LeU1K+V1qSJ
-fW752tVkG4S03aCdDpzTnDqGo28xYBy/juaBGuLFWC70hkV+8BGVKT/e6KPAU/cU
-xsfJg7IKuWprqT1cReCs/LgrC1qqL91JjmXLHubp5NMwK6C26ZcfuOfhFkJ+oey1
-P5MWfwIj/+0Hhl8k56wA
-=9UPz
+QUZGQ0U5NzREMzRCRDhDAAoJEDr/zpdNNL2Mei0P/ihso3+SbdUxtyyHSnRWx1ik
+IcgnNh9WVFAImpVcLtQmWSfPeeBb3KeroqMlKK0H+VQhvVAdVr0E78qy5mPdz26I
+j5+JA3BiDd0eppfP8ILeskTJUfC1hHeX1XVxkbSnGtlF3mUuWdxvfcN7Pa2K2J0i
+lHFVzL1KZTYuKO1SvGw/U+v66h6yXDxeomntEQXXFMkFlUnFL9XYxN9AIt4inwPB
+wIpklOLXReqWfEGJ0uOAjq4eY/hXnpgRO2X+JfBwUHpywe2mR5dx3gb0EGDU+Ez7
+0p+KADhcxvSEW/OW99D3yQKqf51zVZIixq3x+6sSnWrUBKEEjFO/tIEgbWprcUxu
+xO3wYqaFv39Iudno8hN7i0XLM0EdfOMUSi8Y/8SHAI/I99uyV87xEEybipugrOrW
+7f+dvbJ0YV93O39ApCtlXsOI5zYZEuAwtmvy4tADxL22I9NTdVFPNC5COculTtiv
+pYCCBQdxd3YpruMKxMsHGKspHRLJNFLInnssMdahl4AlND0cetDfpCv+n8UgmAqx
+6insHk04bSJSRU116ohYjJFF3vFoPj58YnT3HKYn6COlijll2ndOidPaofIGnDzq
+eotWW2gW/VItgjkN/c1aix637iea0f+/KGAx7tyVz4eJ3etNFNUjOx3jWcyGPAMk
+0OAFjZqTvFXPbhXLLBId
+=Ry5e
 -----END PGP SIGNATURE-----
