@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/ubertooth
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/ubertooth/ChangeLog,v 1.28 2015/03/19 21:51:22 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/ubertooth/ChangeLog,v 1.29 2015/05/03 04:45:41 zerochaos Exp $
+
+  03 May 2015; Rick Farina <zerochaos@gentoo.org> ubertooth-9999.ebuild:
+  changed from python dfu to C dfu implementation
 
   19 Mar 2015; Rick Farina <zerochaos@gentoo.org> ubertooth-9999.ebuild:
   update pcap dep properly.  upstream should add some better flags for
